{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 30,
  "lineage": "6cd37e8a-c8eb-76dd-0fe9-2772ab28da91",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-03T05:57:11.053-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ginthi-entrans/global/firewalls/flipkart-dev-allow-https-egress",
            "log_config": [],
            "name": "flipkart-dev-allow-https-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "priority": 1000,
            "project": "ginthi-entrans",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/firewalls/flipkart-dev-allow-https-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-03T05:57:11.409-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ginthi-entrans/global/firewalls/flipkart-dev-firewall-allow-ssh",
            "log_config": [],
            "name": "flipkart-dev-firewall-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "priority": 1000,
            "project": "ginthi-entrans",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/firewalls/flipkart-dev-firewall-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.57.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-03-03T05:57:11.247-08:00",
            "id": "projects/ginthi-entrans/global/addresses/flipkart-dev-private-service-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "flipkart-dev-private-service-range",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "prefix_length": 16,
            "project": "ginthi-entrans",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/addresses/flipkart-dev-private-service-range"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "mtu": 0,
            "name": "flipkart-dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6900369163190752881",
            "project": "ginthi-entrans",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64513,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-03-03T05:57:11.726-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ginthi-entrans/regions/asia-south1/routers/flipkart-dev-router",
            "name": "flipkart-dev-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "project": "ginthi-entrans",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south1/routers/flipkart-dev-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router_delhi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64513,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-03-03T05:57:14.222-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ginthi-entrans/regions/asia-south2/routers/flipkart-dev-router-delhi",
            "name": "flipkart-dev-router-delhi",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "project": "ginthi-entrans",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south2/routers/flipkart-dev-router-delhi"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ginthi-entrans/asia-south1/flipkart-dev-router/flipkart-dev-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "flipkart-dev-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ginthi-entrans",
            "region": "asia-south1",
            "router": "flipkart-dev-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_delhi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ginthi-entrans/asia-south2/flipkart-dev-router-delhi/flipkart-dev-nat-delhi",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "flipkart-dev-nat-delhi",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ginthi-entrans",
            "region": "asia-south2",
            "router": "flipkart-dev-router-delhi",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router_delhi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T05:57:12.017-08:00",
            "gateway_address": "172.21.2.1",
            "id": "projects/ginthi-entrans/regions/asia-south1/subnetworks/flipkart-dev-priv-subnet-1",
            "ip_cidr_range": "172.21.2.0/24",
            "name": "flipkart-dev-priv-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ginthi-entrans",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south1/subnetworks/flipkart-dev-priv-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T05:57:13.249-08:00",
            "gateway_address": "172.22.4.1",
            "id": "projects/ginthi-entrans/regions/asia-south2/subnetworks/flipkart-dev-priv-subnet-2",
            "ip_cidr_range": "172.22.4.0/24",
            "name": "flipkart-dev-priv-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ginthi-entrans",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south2/subnetworks/flipkart-dev-priv-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T05:57:12.543-08:00",
            "gateway_address": "172.21.1.1",
            "id": "projects/ginthi-entrans/regions/asia-south1/subnetworks/flipkart-dev-pub-subnet-1",
            "ip_cidr_range": "172.21.1.0/24",
            "name": "flipkart-dev-pub-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ginthi-entrans",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south1/subnetworks/flipkart-dev-pub-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T05:57:12.364-08:00",
            "gateway_address": "172.22.3.1",
            "id": "projects/ginthi-entrans/regions/asia-south2/subnetworks/flipkart-dev-pub-subnet-2",
            "ip_cidr_range": "172.22.3.0/24",
            "name": "flipkart-dev-pub-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/global/networks/flipkart-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ginthi-entrans",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ginthi-entrans/regions/asia-south2/subnetworks/flipkart-dev-pub-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}